# koran-teknologi

./: .env.template  .flake8  .gitignore  CLAUDE.md  Makefile  README.md  main.py  monthly-dummy.txt  pyproject.toml
.claude/skills/scraper-ops/: SKILL.md
.claude/skills/scraper-ops/evals/: evals.json
.github/: copilot.instruction.md
.github/workflows/: ci.yml  cronjob.yml  daily-check.yml  monthly-commit.yml  scheduler.yml  test-scheduler.yml
channels/: __init__.py  telegram.py
cmd/: __init__.py  cli.py  http.py
scrapers/: __init__.py  airbnb.py  anthropic.py  aws.py  base_scraper.py  bytebytego.py  claude.py  github.py  google_research.py  lyft.py  netflix.py  uber.py
services/: koran_service.py
sources/: airbnb.py  base.py  bytebytego.py  netflix.py  uber.py
utils/: __init__.py  logger.py
utils/logger/: __init__.py  logger.py
