[tool.poetry]
name = "koran-teknologi"
version = "0.1.0"
description = "A service that aggregates tech blog posts from various companies"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "scrapers" },
    { include = "channels" },
    { include = "utils" }
]

[tool.poetry.dependencies]
python = "^3.11"
python-telegram-bot = "^20.0"
beautifulsoup4 = "^4.12.0"
aiohttp = "^3.11.18"
python-dotenv = "^1.0.0"
schedule = "^1.2.0"
selenium = "^4.31.0"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.2"
mypy = "^1.9.0"
black = "^24.3.0"
isort = "^5.13.2"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3